Play Pause done

--- a/vimeo-iframe.html
+++ b/vimeo-iframe.html
@@ -12,6 +12,9 @@
     frameborder="0"></iframe>
   <input id="seekNumber" type="number">
   <button onclick="seek()">Seek To</button>
+  <button onclick="play()">Play</button><br>
+  <button onclick="pause()">Pause</button>
+  <button onclick="currentTime()">Get currentTime</button>
   <script src="script.js" charset="utf-8"></script>
 </body>
 
