Added seek to continue video

--- a/vimeo-iframe.html
+++ b/vimeo-iframe.html
@@ -10,6 +10,7 @@
 <body>
   <iframe id="player_1" src="https://player.vimeo.com/video/120983588?autoplay=true&amp;player_id=player_1" width="100%" height="420"
     frameborder="0"></iframe>
+  <div id="current-time"></div>
   <input id="seekNumber" type="number">
   <button onclick="seek()">Seek To</button>
   <button onclick="play()">Play</button><br>
